--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"author": "dangscha",
 	"main": "Server.js",
 	"scripts": {
-		"start": "node Aufgabe6/Server/Server.js"
+		"start": "node Aufgabe8b/Server/Server.js"
 	},
 	"engines": {
 		"node": "8.10.0"
